[gd_scene load_steps=8 format=3 uid="uid://cdn6vrsj310n4"]

[ext_resource type="Script" path="res://src/world/player_hub/player_hub.gd" id="1_xe7ou"]
[ext_resource type="Texture2D" uid="uid://duvwifxjnoik2" path="res://assets/tilesets/tileset_sf.png" id="1_ylgtt"]
[ext_resource type="Script" path="res://src/world/player_hub/player_ore_delivery_detector.gd" id="3_4th7l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vfhxy"]
texture = ExtResource("1_ylgtt")
texture_region_size = Vector2i(64, 64)
5:10/0 = 0
5:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:10/0/physics_layer_0/angular_velocity = 0.0
4:10/0 = 0
4:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
4:11/0 = 0
4:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:11/0/physics_layer_0/angular_velocity = 0.0
5:11/0 = 0
5:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:11/0/physics_layer_0/angular_velocity = 0.0
6:10/0 = 0
6:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:10/0/physics_layer_0/angular_velocity = 0.0
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:10/0/physics_layer_0/angular_velocity = 0.0
6:11/0 = 0
6:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:11/0/physics_layer_0/angular_velocity = 0.0
7:11/0 = 0
7:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:11/0/physics_layer_0/angular_velocity = 0.0
10:10/0 = 0
10:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:10/0/physics_layer_0/angular_velocity = 0.0
11:10/0 = 0
11:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:10/0/physics_layer_0/angular_velocity = 0.0
12:10/0 = 0
12:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:10/0/physics_layer_0/angular_velocity = 0.0
13:10/0 = 0
13:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:10/0/physics_layer_0/angular_velocity = 0.0
14:10/0 = 0
14:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:10/0/physics_layer_0/angular_velocity = 0.0
15:10/0 = 0
15:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:10/0/physics_layer_0/angular_velocity = 0.0
16:10/0 = 0
16:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:10/0/physics_layer_0/angular_velocity = 0.0
17:10/0 = 0
17:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:10/0/physics_layer_0/angular_velocity = 0.0
18:10/0 = 0
18:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:10/0/physics_layer_0/angular_velocity = 0.0
19:10/0 = 0
19:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:10/0/physics_layer_0/angular_velocity = 0.0
20:10/0 = 0
20:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:10/0/physics_layer_0/angular_velocity = 0.0
21:10/0 = 0
21:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:10/0/physics_layer_0/angular_velocity = 0.0
22:10/0 = 0
22:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:10/0/physics_layer_0/angular_velocity = 0.0
22:9/0 = 0
22:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
22:9/0/physics_layer_0/angular_velocity = 0.0
22:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
21:9/0 = 0
21:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:9/0/physics_layer_0/angular_velocity = 0.0
21:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
20:9/0 = 0
20:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:9/0/physics_layer_0/angular_velocity = 0.0
20:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
19:9/0 = 0
19:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:9/0/physics_layer_0/angular_velocity = 0.0
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
18:9/0 = 0
18:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:9/0/physics_layer_0/angular_velocity = 0.0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:9/0 = 0
17:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:9/0/physics_layer_0/angular_velocity = 0.0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:9/0 = 0
16:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:9/0/physics_layer_0/angular_velocity = 0.0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:9/0 = 0
15:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:9/0/physics_layer_0/angular_velocity = 0.0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:9/0 = 0
14:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:9/0/physics_layer_0/angular_velocity = 0.0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:9/0 = 0
13:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:9/0/physics_layer_0/angular_velocity = 0.0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:9/0 = 0
12:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:9/0/physics_layer_0/angular_velocity = 0.0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:9/0 = 0
11:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:9/0/physics_layer_0/angular_velocity = 0.0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:9/0 = 0
10:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:9/0/physics_layer_0/angular_velocity = 0.0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:8/0 = 0
13:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:8/0/physics_layer_0/angular_velocity = 0.0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:8/0 = 0
14:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:8/0/physics_layer_0/angular_velocity = 0.0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:7/0 = 0
14:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:7/0/physics_layer_0/angular_velocity = 0.0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:7/0 = 0
13:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:7/0/physics_layer_0/angular_velocity = 0.0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:6/0 = 0
16:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:6/0/physics_layer_0/angular_velocity = 0.0
16:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:8/0 = 0
16:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:8/0/physics_layer_0/angular_velocity = 0.0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:8/0 = 0
17:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:8/0/physics_layer_0/angular_velocity = 0.0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
18:8/0 = 0
18:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:8/0/physics_layer_0/angular_velocity = 0.0
18:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
19:8/0 = 0
19:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:8/0/physics_layer_0/angular_velocity = 0.0
19:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
20:8/0 = 0
20:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:8/0/physics_layer_0/angular_velocity = 0.0
20:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
21:8/0 = 0
21:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:8/0/physics_layer_0/angular_velocity = 0.0
21:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
21:7/0 = 0
21:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:7/0/physics_layer_0/angular_velocity = 0.0
21:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
21:6/0 = 0
21:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:6/0/physics_layer_0/angular_velocity = 0.0
21:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
20:6/0 = 0
20:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:6/0/physics_layer_0/angular_velocity = 0.0
20:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
19:6/0 = 0
19:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:6/0/physics_layer_0/angular_velocity = 0.0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
19:7/0 = 0
19:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:7/0/physics_layer_0/angular_velocity = 0.0
19:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:15/0 = 0
12:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:15/0/physics_layer_0/angular_velocity = 0.0
13:15/0 = 0
13:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:15/0/physics_layer_0/angular_velocity = 0.0
8:15/0 = 0
8:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:15/0/physics_layer_0/angular_velocity = 0.0
8:14/0 = 0
8:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:14/0/physics_layer_0/angular_velocity = 0.0
7:14/0 = 0
7:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:14/0/physics_layer_0/angular_velocity = 0.0
7:15/0 = 0
7:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:15/0/physics_layer_0/angular_velocity = 0.0
9:16/0 = 0
9:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:16/0/physics_layer_0/angular_velocity = 0.0
10:16/0 = 0
10:16/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:16/0/physics_layer_0/angular_velocity = 0.0
10:14/0 = 0
10:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:14/0/physics_layer_0/angular_velocity = 0.0
9:14/0 = 0
9:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:14/0/physics_layer_0/angular_velocity = 0.0
3:15/0 = 0
3:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:15/0/physics_layer_0/angular_velocity = 0.0
4:15/0 = 0
4:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:15/0/physics_layer_0/angular_velocity = 0.0
5:15/0 = 0
5:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:15/0/physics_layer_0/angular_velocity = 0.0
6:15/0 = 0
6:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:15/0/physics_layer_0/angular_velocity = 0.0
0:15/0 = 0
0:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:15/0/physics_layer_0/angular_velocity = 0.0
1:15/0 = 0
1:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:15/0/physics_layer_0/angular_velocity = 0.0
2:15/0 = 0
2:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:15/0/physics_layer_0/angular_velocity = 0.0
0:14/0 = 0
0:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:14/0/physics_layer_0/angular_velocity = 0.0
3:14/0 = 0
3:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:14/0/physics_layer_0/angular_velocity = 0.0
4:14/0 = 0
4:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:14/0/physics_layer_0/angular_velocity = 0.0
5:14/0 = 0
5:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:14/0/physics_layer_0/angular_velocity = 0.0
6:14/0 = 0
6:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:14/0/physics_layer_0/angular_velocity = 0.0
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
15:7/0 = 0
15:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:7/0/physics_layer_0/angular_velocity = 0.0
15:8/0 = 0
15:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:8/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_3tkh7"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 65
sources/0 = SubResource("TileSetAtlasSource_vfhxy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0uts"]
size = Vector2(64, 256)

[sub_resource type="CircleShape2D" id="CircleShape2D_tcpgd"]
radius = 160.0

[node name="PlayerHub" type="Node2D"]
script = ExtResource("1_xe7ou")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3tkh7")
format = 2
layer_0/tile_data = PackedInt32Array(-458760, 1245184, 6, -393224, 1245184, 7, -327688, 1245184, 7, -262152, 1245184, 7, -196616, 1245184, 7, -131080, 1245184, 7, -65544, 1245184, 7, -8, 1245184, 7, 65528, 1245184, 7, 131064, 1245184, 7, 196600, 1245184, 7, 262136, 1245184, 7, 327672, 1245184, 7, 393208, 1245184, 7, 458744, 1245184, 7, 524280, 1245184, 8, -458759, 1310720, 6, -393223, 262144, 10, -327687, 262144, 10, -262151, 262144, 11, -196615, 196608, 11, -131079, 196608, 11, -65543, 262144, 11, -7, 262144, 11, 65529, 196608, 11, 131065, 196608, 11, 196601, 262144, 11, 262137, 262144, 10, 327673, 196608, 11, 393209, 262144, 11, 458745, 262144, 10, 524281, 1310720, 8, -458758, 1310720, 6, -393222, 262144, 10, -327686, 196608, 11, -262150, 196608, 11, -196614, 196608, 10, -131078, 262144, 10, -65542, 262144, 11, -6, 262144, 10, 65530, 262144, 11, 131066, 262144, 10, 196602, 262144, 11, 262138, 262144, 11, 327674, 262144, 11, 393210, 196608, 11, 458746, 196608, 10, 524282, 1310720, 8, -458757, 1310720, 6, -393221, 262144, 10, -327685, 196608, 11, -262149, 196608, 11, -196613, 262144, 11, -131077, 983040, 9, -65541, 983040, 10, -5, 196608, 10, 65531, 262144, 10, 131067, 262144, 10, 196603, 262144, 11, 262139, 196608, 10, 327675, 262144, 10, 393211, 262144, 11, 458747, 196608, 10, 524283, 1310720, 8, -458756, 1310720, 6, -393220, 196608, 10, -327684, 262144, 11, -262148, 196608, 10, -196612, 262144, 11, -131076, 196608, 11, -65540, 262144, 10, -4, 262144, 10, 65532, 196608, 11, 131068, 196608, 10, 196604, 196608, 10, 262140, 262144, 11, 327676, 196608, 10, 393212, 262144, 10, 458748, 196608, 11, 524284, 1310720, 8, -458755, 1310720, 6, -393219, 196608, 10, -327683, 262144, 10, -262147, 196608, 11, -196611, 196608, 10, -131075, 196608, 11, -65539, 262144, 11, -3, 196608, 10, 65533, 196608, 11, 131069, 196608, 11, 196605, 262144, 10, 262141, 196608, 10, 327677, 196608, 10, 393213, 262144, 10, 458749, 262144, 10, 524285, 1310720, 8, -458754, 1310720, 6, -393218, 196608, 11, -327682, 196608, 11, -262146, 262144, 11, -196610, 262144, 10, -131074, 262144, 10, -65538, 262144, 10, -2, 196608, 11, 65534, 262144, 10, 131070, 196608, 11, 196606, 262144, 11, 262142, 196608, 10, 327678, 262144, 11, 393214, 262144, 11, 458750, 196608, 10, 524286, 1310720, 8, -458753, 1310720, 6, -393217, 262144, 10, -327681, 262144, 10, -262145, 262144, 11, -196609, 262144, 10, -131073, 262144, 10, -65537, 196608, 10, -1, 262144, 11, 65535, 196608, 11, 131071, 262144, 11, 196607, 262144, 10, 262143, 196608, 11, 327679, 196608, 11, 393215, 196608, 11, 458751, 262144, 10, 524287, 1310720, 8, -524288, 1310720, 6, -458752, 262144, 10, -393216, 262144, 11, -327680, 196608, 10, -262144, 262144, 10, -196608, 196608, 10, -131072, 262144, 11, -65536, 262144, 11, 0, 196608, 10, 65536, 196608, 11, 131072, 196608, 11, 196608, 262144, 11, 262144, 196608, 11, 327680, 262144, 10, 393216, 262144, 11, 458752, 1310720, 8, -524287, 1310720, 6, -458751, 196608, 11, -393215, 196608, 10, -327679, 262144, 10, -262143, 262144, 11, -196607, 262144, 11, -131071, 196608, 11, -65535, 196608, 11, 1, 262144, 10, 65537, 262144, 11, 131073, 262144, 10, 196609, 196608, 11, 262145, 262144, 10, 327681, 262144, 11, 393217, 196608, 10, 458753, 1310720, 8, -524286, 1310720, 6, -458750, 262144, 11, -393214, 262144, 10, -327678, 262144, 11, -262142, 196608, 10, -196606, 196608, 11, -131070, 262144, 10, -65534, 262144, 10, 2, 262144, 11, 65538, 262144, 10, 131074, 196608, 11, 196610, 262144, 10, 262146, 262144, 10, 327682, 196608, 11, 393218, 196608, 11, 458754, 1310720, 8, -524285, 1310720, 6, -458749, 196608, 10, -393213, 196608, 10, -327677, 262144, 11, -262141, 262144, 10, -196605, 196608, 11, -131069, 196608, 11, -65533, 262144, 11, 3, 262144, 10, 65539, 196608, 10, 131075, 262144, 10, 196611, 262144, 10, 262147, 196608, 10, 327683, 262144, 11, 393219, 196608, 11, 458755, 1310720, 8, -524284, 1310720, 6, -458748, 196608, 11, -393212, 262144, 11, -327676, 196608, 10, -262140, 262144, 11, -196604, 196608, 11, -131068, 196608, 11, -65532, 196608, 10, 4, 196608, 10, 65540, 262144, 11, 131076, 196608, 11, 196612, 262144, 11, 262148, 262144, 10, 327684, 262144, 10, 393220, 196608, 11, 458756, 1310720, 8, -524283, 1310720, 6, -458747, 262144, 11, -393211, 196608, 10, -327675, 262144, 11, -262139, 262144, 10, -196603, 262144, 10, -131067, 196608, 11, -65531, 196608, 11, 5, 262144, 10, 65541, 196608, 10, 131077, 262144, 10, 196613, 262144, 10, 262149, 196608, 11, 327685, 196608, 10, 393221, 196608, 11, 458757, 1310720, 8, -524282, 1310720, 6, -458746, 196608, 11, -393210, 196608, 10, -327674, 196608, 10, -262138, 262144, 11, -196602, 196608, 10, -131066, 262144, 10, -65530, 196608, 11, 6, 262144, 11, 65542, 196608, 10, 131078, 262144, 10, 196614, 196608, 11, 262150, 262144, 10, 327686, 196608, 10, 393222, 196608, 10, 458758, 1310720, 8, -524281, 1376256, 6, -458745, 1376256, 7, -393209, 1376256, 7, -327673, 1376256, 7, -262137, 1376256, 7, -196601, 1376256, 7, -131065, 196608, 10, -65529, 196608, 10, 7, 196608, 10, 65543, 196608, 10, 131079, 1376256, 7, 196615, 1376256, 7, 262151, 1376256, 7, 327687, 1376256, 7, 393223, 1376256, 7, 458759, 1376256, 8)

[node name="PlayerDoorDetector" type="Area2D" parent="."]
position = Vector2(448, -128)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDoorDetector"]
position = Vector2(32, 128)
shape = SubResource("RectangleShape2D_h0uts")
debug_color = Color(0.454902, 0.596078, 0, 0.129412)

[node name="PlayerOreDeliveryDetector" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_4th7l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOreDeliveryDetector"]
position = Vector2(-288, -160)
shape = SubResource("CircleShape2D_tcpgd")

[node name="Label" type="Label" parent="PlayerOreDeliveryDetector"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -331.0
offset_top = -196.0
offset_right = -243.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
text = "0 Dirithium"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_exited" from="PlayerDoorDetector" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="PlayerOreDeliveryDetector" to="PlayerOreDeliveryDetector" method="_on_body_entered"]
